<resources>
    <string name="app_name">蛋挞</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_home">首页</string>
    <string name="nav_image">妹纸</string>
    <string name="nav_bookmarks">收藏</string>
    <string name="nav_about">关于</string>
    <string name="nav_settings">设置</string>

    <string name="zhihu_daily">知乎日报</string>
    <string name="buzhidao">不知道</string>

    <string name="delete">删除</string>
    <string name="select_all">全选</string>
    
    <string name="loading_more">正在努力加载...</string>
    <string name="loaded_failed">加载失败!</string>
    <string name="no_browser_found">没有安装浏览器</string>
    <string name="retry">重试</string>
    <string name="copied_to_clipboard">复制成功</string>
    <string name="copied_to_clipboard_failed">复制失败</string>
    <string name="added_to_bookmarks">已添加到收藏</string>
    <string name="deleted_from_bookmarks">已从收藏中删除</string>
    <string name="nothing">什么都没有哦</string>

    <string name="refresh">刷新</string>
    <string name="action_add_to_bookmarks">添加到收藏</string>
    <string name="action_delete_from_bookmarks">取消收藏</string>
    <string name="action_copy_link">复制链接</string>
    <string name="action_open_in_browser">在浏览器中打开</string>
    <string name="action_copy_text">复制内容文本</string>
    <string name="action_share_as_text">分享</string>
    <string name="share_error">分享失败</string>
    <string name="share_extra"> 分享自 蛋挞</string>
    <string name="share_to">分享至</string>
    <string name="network_error">网络走丢了…点击重试</string>

    <string name="basic_settings">基本设置</string>
    <string name="no_picture_mode">无图模式</string>
    <string name="no_picture_mode_description">阅读时不再加载图片</string>
    <string name="time_of_saving_articles">文章保存时间</string>
    <string name="change_theme">切换主题</string>
    <string name="day_mode">日间模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="other_settings">其他设置</string>
    <string name="clear_image_cache">清除图片缓存</string>
    <string name="clear_image_cache_successfully">清理成功</string>

    <string name="version">版本</string>
    <string name="version_number">V1.0.0</string>
    <string name="developer">开发者</string>
    <string name="developer_name">zz</string>
    <string name="developer_description">广东,深圳</string>
    <string name="github">GitHub</string>
    <string name="github_url">https://github.com/ZZ-Li</string>

</resources>
